--- a/hours.html
+++ b/hours.html
@@ -1,5 +1,9 @@
 <html lang="en">
-<head></head>
+  
+<head>
+<script type="text/javascript" src="yourfilelocation/hour.js"></script>
+</head>
+  
 <body>
 
 <div id="hours" class="hours"></div>
